exports[`Analysis > of a point > runs, giving reasonable results #0`] = `
<div aria-label="Opportunities within isochrone" class="css-1xlhhoc">
  85,635
</div>
`;

exports[`Analysis > of a point > runs, giving reasonable results #1`] = `
<div aria-label="Opportunities within isochrone" class="css-1xlhhoc">
  33,626
</div>
`;

exports[`Analysis > of a point > runs, giving reasonable results #2`] = `
<div aria-label="Opportunities within isochrone" class="css-1xlhhoc">3,082</div>
`;

exports[`Analysis > of a point > gives different results at different times #0`] = `
<div aria-label="Opportunities within isochrone" class="css-1xlhhoc">
  76,272
</div>
`;

exports[`Analysis > of a point > gives different results at different times #1`] = `
<div aria-label="Opportunities within isochrone" class="css-1xlhhoc">
  32,109
</div>
`;

exports[`Analysis > of a point > handles direct access by walk/bike only #0`] = `
<div aria-label="Opportunities within isochrone" class="css-1xlhhoc">
  93,708
</div>
`;

exports[`Analysis > of a point > uses custom analysis bounds #0`] = `
<div aria-label="Opportunities within isochrone" class="css-1xlhhoc">
  72,012
</div>
`;
